--- a/OnlineShop/Client/wwwroot/index.html
+++ b/OnlineShop/Client/wwwroot/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>OnlineShop</title>
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link href="OnlineShop.Client.styles.css" rel="stylesheet" />
 </head>
 
@@ -21,5 +22,5 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
-
+<script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </html>
