--- a/OnlineShop/Client/wwwroot/index.html
+++ b/OnlineShop/Client/wwwroot/index.html
@@ -8,7 +8,7 @@
     <base href="/" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css?v=5.2.0" rel="stylesheet" />
     <link href="OnlineShop.Client.styles.css" rel="stylesheet" />
 </head>
 
@@ -21,6 +21,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+<!--    <script src="_content/MudBlazor/MudBlazor.min.js"></script>-->
+    <script src="_content/MudBlazor/MudBlazor.min.js?v=5.2.0"></script>
 </body>
-<script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </html>
