--- a/OnlineShop/Client/wwwroot/index.html
+++ b/OnlineShop/Client/wwwroot/index.html
@@ -8,7 +8,7 @@
     <base href="/" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-    <link href="_content/MudBlazor/MudBlazor.min.css?v=5.2.0" rel="stylesheet" />
+    <link href="css/MudBlazor.min.css" rel="stylesheet" />
     <link href="OnlineShop.Client.styles.css" rel="stylesheet" />
 </head>
 
