Update Client: setup Blazor.Cropper

--- a/OnlineShop/Client/wwwroot/index.html
+++ b/OnlineShop/Client/wwwroot/index.html
@@ -23,5 +23,6 @@
     <script src="_framework/blazor.webassembly.js"></script>
 <!--    <script src="_content/MudBlazor/MudBlazor.min.js"></script>-->
     <script src="_content/MudBlazor/MudBlazor.min.js?v=5.2.0"></script>
+    <script src="_content/Chronos.Blazor.Cropper/CropHelper.js"></script>
 </body>
 </html>
