--- a/OnlineShop/Client/wwwroot/index.html
+++ b/OnlineShop/Client/wwwroot/index.html
@@ -28,5 +28,38 @@
 <!--    <script src="_content/MudBlazor/MudBlazor.min.js"></script>-->
     <script src="_content/MudBlazor/MudBlazor.min.js?v=5.2.0"></script>
     <script src="_content/Chronos.Blazor.Cropper/CropHelper.js"></script>
+    <script>
+        window.blazorExtensions = {
+
+            SetCookie: function (name, value, days) {
+                var expires;
+                if (days) {
+                    var date = new Date();
+                    date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+                    expires = "; expires=" + date.toGMTString();
+                }
+                else {
+                    expires = "";
+                }
+                document.cookie = name + "=" + value + expires + "; path=/";
+            },
+            GetCookie: function (cname) {
+                var name = cname + "=";
+                var decodedCookie = decodeURIComponent(document.cookie);
+                var ca = decodedCookie.split(';');
+                for (var i = 0; i < ca.length; i++) {
+                    var c = ca[i];
+                    while (c.charAt(0) == ' ') {
+                        c = c.substring(1);
+                    }
+                    if (c.indexOf(name) == 0) {
+                        return c.substring(name.length, c.length);
+                    }
+                }
+                return "";
+            }
+            
+        }
+    </script>
 </body>
 </html>
