--- a/OnlineShop/Client/wwwroot/index.html
+++ b/OnlineShop/Client/wwwroot/index.html
@@ -28,9 +28,14 @@
 <!--    <script src="_content/MudBlazor/MudBlazor.min.js"></script>-->
     <script src="_content/MudBlazor/MudBlazor.min.js?v=5.2.0"></script>
     <script src="_content/Chronos.Blazor.Cropper/CropHelper.js"></script>
-    <script src="js/html2canvas.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
-    <script src="js/unit-to-px.js"></script>
+    
+<!--    <script src="js/html2canvas.min.js"></script>-->
+<!--    <script src="js/unit-to-px.js"></script>-->
+<!--    <script type="text/javascript" src="js/purify.min.js"></script>-->
+<!--    <script type="text/javascript" src="https://unpkg.com/canvg@3.0.4/lib/umd.js"></script>-->
+<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.2.0/jspdf.umd.min.js"></script>-->
+<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.debug.js"></script>-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     
     <script src="js/blazorExtensions.js"></script>
 
